fix link styling so it's visible in IE

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -114,7 +114,9 @@ body > .container.home {
 	/* Simple Link */
 	.simple-link {
 	  float:right;
-	  margin:-38px 20px 0 0;
+	  top:-40px;
+	  right:20px;
+	  position:absolute;
 	}
 	.simple-link a {
 		display:block;
